<package format="2">
  <name>svox_tts</name>
  <version>0.0.1</version>
  <description>A ROS wrapper for the svox-pico TTS Engine. Based on the analogous YARP wrapper: https://github.com/robotology/speech/tree/master/svox-speech .</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="alessandro.roncone@yale.edu">Alessandro Roncone</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv2.1</license>


  <!-- Url tags are optional, but multiple allowed, one per tag -->
  <url type="repository">https://github.com/scazlab/svox_tts</url>


  <!-- Author tags are optional, multiple allowed, one per tag -->
  <author email="alessandro.roncone@yale.edu">Alessandro Roncone</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>rosconsole</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
